[gd_scene load_steps=10 format=3 uid="uid://8urgulfeikba"]

[ext_resource type="AudioStream" uid="uid://2u73yye23mpv" path="res://Assets/Sound/Sound effects/Tree/rustle.mp3" id="1"]
[ext_resource type="Script" path="res://World/Objects/Farm/PlantedCrop.gd" id="1_37wdp"]
[ext_resource type="Texture2D" uid="uid://cjrunxgi4b1we" path="res://Assets/Images/crop_sets/wheat/1.png" id="3"]

[sub_resource type="CircleShape2D" id="13"]
radius = 48.0

[sub_resource type="CircleShape2D" id="2"]

[sub_resource type="RectangleShape2D" id="4"]
size = Vector2(30, 30)

[sub_resource type="SpriteFrames" id="12"]
animations = []

[sub_resource type="Animation" id="3"]
resource_name = "animate"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CropText:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.45, 0.75, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 6.0, -4.0, 2.0, -2.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ci831"]
_data = {
"animate": SubResource("3")
}

[node name="PlantedCrop" type="Area2D"]
collision_layer = 0
collision_mask = 131072
script = ExtResource("1_37wdp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("13")

[node name="CropText" type="TextureRect" parent="."]
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_vertical = 0
pivot_offset = Vector2(16, 64)
mouse_filter = 2
texture = ExtResource("3")

[node name="PlayAnimBox" type="Area2D" parent="."]
visible = false
position = Vector2(-17, -13)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayAnimBox"]
position = Vector2(17, 14)
shape = SubResource("2")

[node name="HurtBox" type="Area2D" parent="."]
visible = false
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("4")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
visible = false
position = Vector2(1.90735e-06, 5)
scale = Vector2(3.5, 3.7)

[node name="LeafEffect" type="AnimatedSprite2D" parent="."]
visible = false
modulate = Color(1.2, 1.2, 1.2, 1)
position = Vector2(0, -4)
scale = Vector2(2, 2)
sprite_frames = SubResource("12")
animation = &""

[node name="RustleSound" type="AudioStreamPlayer2D" parent="."]
visible = false
position = Vector2(-16, 0)
stream = ExtResource("1")
volume_db = -24.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ci831")
}

[connection signal="body_entered" from="PlayAnimBox" to="." method="_on_PlayAnimBox_body_entered"]
[connection signal="body_exited" from="PlayAnimBox" to="." method="_on_PlayAnimBox_body_exited"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
